# nanoplus

./: test.launch
adns3080/: CMakeLists.txt  adns3080.sh  adns3080_vis.sh  mainpage.dox  manifest.xml  nodelet_plugin.xml
adns3080/include/: adns3080.h
adns3080/launch/: test.launch  vis.launch
adns3080/src/: adns3080.c  adns3080_nodelet.cpp  adns3080_vis.cpp
kquad_interface/: CMakeLists.txt
kquad_interface/launch/: standalone.launch
kquad_interface/src/: kQuadInterface.cc  kQuadInterfaceDataTypes.cc  kquad_interface_nodelet.cpp
optical_flow/: CMakeLists.txt  mainpage.dox  manifest.xml
optical_flow/config/: filter_params.yaml
optical_flow/launch/: filter.launch  filter_vicon.launch  px4flow.launch
optical_flow/src/: filter.cpp  filter_turn.cpp  px4flow_filter.cpp  vicon_filter.cpp
opticalflow_msgs/: mainpage.dox  manifest.xml
opticalflow_msgs/msg/: Goal.msg  OpticalFlowCommand.msg  OpticalSensor.msg  StateMsg.msg  Traj.msg
overo-arduino-i2c-master/overo-c/: Makefile  Makefile-native  overo-i2c  test  test.c
quad_decode_msg/launch/: decode.launch
quad_decode_msg/src/: quad_decode_msg_nodelet.cpp
quad_encode_msg/launch/: encode.launch
quad_serial_comm/launch/: test.launch
quad_serial_comm/src/: asctec_serial_interface.cpp
quadrotor_msgs/: CMakeLists.txt
quadrotor_msgs/src/: decode_msgs.cpp  encode_msgs2.cpp
se3control/: CMakeLists.txt  mainpage.dox  manifest.xml  se3control.sh
se3control/launch/: adns_3080.launch  combo.launch  combo_standalone.launch  filter_sonar.launch  nanoplus.launch  nanoplus_sim.launch  se3control.launch  se3control_standalone.launch  se3control_withoutvicon.launch
se3control/src/: combo.cpp  nanoplus.cpp  nanoplus_control.cpp  nanoplus_ir.cpp  se3control.cpp  se3control_standalone.cpp  trajectory.cpp  trajectory_minimumjerk.cpp  trajectory_standalone.cpp
so3_control/config/: corrections.yaml  (+1 more)
sonar/: CMakeLists.txt  manifest.xml
(+80 files in other folders)
